<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/snowy_mint"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:id="@+id/text"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/samsung"
        android:id="@+id/pict"
        android:layout_margin="16dp"
        android:layout_below="@+id/text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/text_name"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:layout_below="@+id/pict"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_price"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/text_price"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:layout_below="@+id/pict"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_desc"
        android:id="@+id/text_desc"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:layout_below="@+id/text_name"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/smartphone"
        android:id="@+id/icon_smartphone"
        android:layout_marginLeft="32dp"
        android:layout_marginVertical="8dp"
        android:layout_below="@+id/text_desc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory"
        android:id="@+id/text_memory"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_below="@+id/text_desc"
        android:layout_toRightOf="@+id/icon_smartphone"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera"
        android:id="@+id/icon_camera"
        android:layout_marginLeft="32dp"
        android:layout_marginVertical="8dp"
        android:layout_below="@+id/icon_smartphone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:id="@+id/text_camera"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_below="@+id/icon_smartphone"
        android:layout_toRightOf="@+id/icon_camera"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:drawableLeft="@drawable/bookmark"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="32dp"
        android:text="Bookmark"
        />
<!--    <Space-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="32dp"-->
<!--        android:layout_below=""-->
<!--        />-->

</RelativeLayout>